fix wrong font name

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -575,7 +575,7 @@ h2 {
   color: $brown900;
   background-color: $pink100;
   font: {
-    family: "Roboto Light";
+    family: "Roboto Thin";
   }
   svg {
     color: $brown900;
